--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,22 @@
+aiofiles==24.1.0
+aiohappyeyeballs==2.4.6
+aiohttp==3.11.13
+aiosignal==1.3.2
+asn1crypto==1.5.1
+async-timeout==5.0.1
+attrs==25.1.0
 blinker==1.9.0
 cachetools==5.5.2
 certifi==2025.1.31
+cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
+cloud-sql-python-connector==1.17.0
+cryptography==44.0.1
+dnspython==2.7.0
 dotenv==0.9.9
 Flask==3.1.0
+frozenlist==1.5.0
 google-api-core==2.24.1
 google-auth==2.38.0
 google-cloud-core==2.4.2
@@ -21,22 +33,28 @@ idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
+multidict==6.1.0
 numpy==2.2.3
 pandas==2.2.3
+pg8000==1.31.2
 pillow==11.1.0
+propcache==0.3.0
 proto-plus==1.26.0
 protobuf==5.29.3
 psycopg2==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
+pycparser==2.22
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2025.1
 requests==2.32.3
 rsa==4.9
+scramp==1.4.5
 six==1.17.0
 SQLAlchemy==2.0.38
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
 Werkzeug==3.1.3
+yarl==1.18.3
