--- a/requirements.txt
+++ b/requirements.txt
@@ -29,12 +29,14 @@ greenlet==3.1.1
 grpc-google-iam-v1==0.14.0
 grpcio==1.71.0rc2
 grpcio-status==1.71.0rc2
+gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
 multidict==6.1.0
 numpy==2.2.3
+packaging==24.2
 pandas==2.2.3
 pg8000==1.31.2
 pillow==11.1.0
