--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -9,13 +9,14 @@ steps:
 
   # Deploy to Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    args: [ 'gcloud', 'run', 'deploy', '${_SERVICE_NAME}', 
-            '--image', '${_REGION}-docker.pkg.dev/${PROJECT_ID}/${_REPOSITORY}/${_IMAGE_NAME}:${SHORT_SHA}',
-            '--platform', 'managed',
-            '--region', '${_REGION}',
-            '--allow-unauthenticated',
-            '--set-env-vars', 'DB_USER=${_DB_USER},DB_PASSWORD=${_DB_PASSWORD},DB_NAME=${_DB_NAME},DB_HOST=${_DB_HOST}' ]
-
+    args: [
+      'gcloud', 'run', 'deploy', '${_SERVICE_NAME}', 
+      '--image', '${_REGION}-docker.pkg.dev/${PROJECT_ID}/${_REPOSITORY}/${_IMAGE_NAME}:${SHORT_SHA}',
+      '--platform', 'managed',
+      '--region', '${_REGION}',
+      '--allow-unauthenticated',
+      '--set-env-vars', 'DB_USER=${_DB_USER},DB_PASSWORD=${_DB_PASSWORD},DB_NAME=${_DB_NAME},DB_HOST=${_DB_HOST},INSTANCE_CONNECTION_NAME=${_INSTANCE_CONNECTION_NAME},GCS_BUCKET_NAME=${_GCS_BUCKET_NAME},QUEUE_NAME=${_QUEUE_NAME},ENV=deployment'
+    ]
 substitutions:
   _REGION: 'your-region'
   _LOCATION: 'your-region'
