--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -15,7 +15,7 @@ steps:
       '--platform', 'managed',
       '--region', '${_REGION}',
       '--allow-unauthenticated',
-      '--set-env-vars', 'LOCATION=${_LOCATION},DB_USER=${_DB_USER},DB_PASS=${_DB_PASS},DB_NAME=${_DB_NAME},DB_HOST=${_DB_HOST},INSTANCE_CONNECTION_NAME=${_INSTANCE_CONNECTION_NAME},GCS_BUCKET_NAME=${_GCS_BUCKET_NAME},QUEUE_NAME=${_QUEUE_NAME},ENV=deployment,CLOUD_RUN_URL=${_CLOUD_RUN_URL},PROJECT_ID=${PROJECT_ID}'
+      '--set-env-vars', 'WEBHOOK_URL=${_WEBHOOK_URL},LOCATION=${_LOCATION},DB_USER=${_DB_USER},DB_PASS=${_DB_PASS},DB_NAME=${_DB_NAME},DB_HOST=${_DB_HOST},INSTANCE_CONNECTION_NAME=${_INSTANCE_CONNECTION_NAME},GCS_BUCKET_NAME=${_GCS_BUCKET_NAME},QUEUE_NAME=${_QUEUE_NAME},ENV=deployment,CLOUD_RUN_URL=${_CLOUD_RUN_URL},PROJECT_ID=${PROJECT_ID}'
     ]
 substitutions:
   _REGION: 'your-region'
@@ -32,6 +32,7 @@ substitutions:
   _PROJECT_ID: 'your-project-id'
   _INSTANCE_CONNECTION_NAME: 'your-instance-connection-name'
   _CLOUD_RUN_URL: 'your-cloud-run-url'
+  _WEBHOOK_URL: 'your-webhook-url'
 
 images:
   - '${_REGION}-docker.pkg.dev/${PROJECT_ID}/${_REPOSITORY}/${_IMAGE_NAME}:${SHORT_SHA}'
